<resources>
    <string name="app_name">Jom Eat</string>
    <string name="welcome_homepage">Welcome To </string>
    <string name="welcome_homepage_2">Jom Eat !!!</string>

    <!--Homepage Event-->
    <string name="event1">Happy   Deepavali !!!</string>
    <string name="event2">Merry Christmas !!!</string>
    <string name="event3">Valentine  Day !!!</string>

    <!--profile privacy policy description-->
    <!--https://app-privacy-policy-generator.firebaseapp.com/-->
    <string name="policy_privacy">
        Teoh built the Jom Eat app as a Free app. This SERVICE is provided by Teoh at no cost and is intended for use as is.
        This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal
        Information if anyone decided to use my Service.
         If you choose to use my Service, then you agree to the collection and use of information in relation
        to this policy. The Personal Information that I collect is used for providing and improving the Service.
        I will not use or share your information with anyone except as described in this Privacy Policy.
         The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible
        at Jom Eat unless otherwise defined in this Privacy Policy.
    </string>

    <string name="policy_information">
        For a better experience, while using our Service, I may require you to provide us with certain personally
        identifiable information. The information that I request will be retained on your device and is not collected
        by me in any way.
        The app does use third party services that may collect information used to identify you.
        Link to privacy policy of third party service providers used by the app
            Google Play Services
    </string>

    <string name="policy_log">
        I want to inform you that whenever you use my Service, in a case of an error in the app
        I collect data and information (through third party products) on your phone called Log Data.
        This Log Data may include information such as your device Internet Protocol (“IP”) address,
        device name, operating system version,
        the configuration of the app when utilizing my Service, the time and date of your use
        of the Service, and other statistics.
    </string>

    <string name="policy_cookies">
        Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers.
        These are sent to your browser from the websites that you visit and are stored on your device internal memory.
        This Service does not use these “cookies” explicitly. However, the app may use third party code and
        libraries that use “cookies” to collect information and improve their services. You have the option
        to either accept or refuse these cookies and know when a cookie is being sent to your device.
        If you choose to refuse our cookies, you may not be able to use some portions of this Service.
    </string>

    <string name="policy_security">
        I value your trust in providing us your Personal Information, thus we are striving to
        use commercially acceptable means of protecting it. But remember that no method of transmission over the internet,
        or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.
    </string>

    <string name="policy_link">
        This Service may contain links to other sites. If you click on a third-party link,
        you will be directed to that site. Note that these external sites are not operated by me.
        Therefore, I strongly advise you to review the Privacy Policy of these websites.
        I have no control over and assume no responsibility for the content, privacy policies,
        or practices of any third-party sites or services.
    </string>

    <string name="policy_children">
        These Services do not address anyone under the age of 13. I do not knowingly collect personally
        identifiable information from children under 13 years of age. In the case I discover that a child
        under 13 has provided me with personal information, I immediately delete this from our servers.
        If you are a parent or guardian and you are aware that your child has provided us with personal information,
        please contact me so that I will be able to do necessary actions.
    </string>

    <string name="policy_change">
        I may update our Privacy Policy from time to time. Thus, you are advised to review this 
        page periodically for any changes. I will notify you of any changes 
        by posting the new Privacy Policy on this page.
        This policy is effective as of 2021-11-12
    </string>

    <string name="policy_contact">
        If you have any questions or suggestions about my Privacy Policy,
        do not hesitate to contact me at p19011178@student.newinti.edu.my.
        This privacy policy page was created at privacypolicytemplate.net
        and modified/generated by App Privacy Policy Generator
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_food_maps">Map</string>
</resources>